--- a/.config/eww/powermenu/eww.scss
+++ b/.config/eww/powermenu/eww.scss
@@ -41,17 +41,17 @@
 }
 
 .btn_lock:hover {
-  background-color: #2C3138;
+  background-color: #11131C;
 }
 .btn_logout:hover {
-  background-color: #2C3138;
+  background-color: #11131C;
 }
 .btn_sleep:hover {
-  background-color: #2C3138;
+  background-color: #11131C;
 }
 .btn_reboot:hover {
-  background-color: #2C3138;
+  background-color: #11131C;
 }
 .btn_poweroff:hover {
-  background-color: #2C3138;
+  background-color: #11131C;
 }
