add mpd volume bar to eww, update scripts

--- a/.config/eww/dashboard/colors.scss
+++ b/.config/eww/dashboard/colors.scss
@@ -29,6 +29,7 @@ $blue-desaturated: #93cee9;
 $magenta: #c296eb;
 $purple: #c296eb;
 $green: #90ceaa;
+$white: #FAFAFA;
 $aquamarine: #90ceaa;
 $yellow: #ecd3a0;
 $accent: $blue;
