--- a/hyprland/.config/waybar/style.css
+++ b/hyprland/.config/waybar/style.css
@@ -1,7 +1,7 @@
 * {
   /* `otf-font-awesome` is required to be installed for icons */
   /* font-family: 'Roboto Mono Medium', 'Ubuntu Nerd Font'; */
-  font-family: 'SF Pro Display Semibold', 'Hack Nerd Font';
+  font-family: 'SF Pro Display Semibold', 'JetBrains Mono Nerd Font';
   font-size: 18px;
   border: none;
   padding: 0;
@@ -24,7 +24,8 @@ window#waybar.hidden {
 }
 
 #workspaces {
-  background-color: rgba(0, 0, 0, 0.15);
+  /* background-color: rgba(0, 0, 0, 0.15); */
+  background-color: transparent;
   border-radius: 10px;
 }
 
@@ -44,11 +45,12 @@ window#waybar.hidden {
 /* https://github.com/Alexays/Waybar/wiki/FAQ#the-workspace-buttons-have-a-strange-hover-effect */
 #workspaces button:hover {
   /* cursor: pointer; */
-  border-radius: 10px;
-  background: rgba(0, 0, 0, 0.2);
+  /* border-radius: 10px; */
+  /* background: rgba(0, 0, 0, 0.2); */
+  background: rgba(255, 255, 255, 0.04);
   /* box-shadow: inset 0 -3px #e9e9e9; */
   /* color: #bf616a; */
-  color: #e9e9e9;
+  color: #BFBFBF;
 }
 
 #workspaces button.focused {
@@ -60,6 +62,9 @@ window#waybar.hidden {
 #workspaces button.active {
   /* color: #ff9e64; */
   color: #e9e9e9;
+  background-color: rgba(255, 255, 255, 0.09);
+  /* border-radius: 10px; */
+  /* background-color: transparent; */
 }
 
 #workspaces button.urgent {
@@ -112,8 +117,10 @@ window#waybar.hidden {
 }
 
 #clock {
+  margin: 0 8px 0 0;
   /* color: #c0caf5; */
   color: #E9E9E9;
+  padding: 0px;
   /* color: #bf616a; */
 }
 
@@ -129,12 +136,14 @@ window#waybar.hidden {
 #battery {
   /* color: #a3be8c; */
   color: #e9e9e9;
+  margin: 0 -3px 0 0;
   /* background-color: #90b1b1; */
 }
 
 #battery.charging,
 #battery.plugged {
   /* color: #26a65b; */
+  margin: 0 -3px 0 0;
   color: #e9e9e9;
   /* background-color: #26a65b; */
 }
@@ -179,14 +188,17 @@ label:focus {
 }
 
 #network {
-  padding: 2.5px;
+  margin: 0;
+  /* padding: 0; */
+  padding: 5.5px;
+  /* margin-right: 0px; */
   /* color: #1abc9c; */
   color: #e9e9e9;
 }
 
 #network:hover {
   /* cursor: pointer; */
-  background: rgba(0, 0, 0, 0.2);
+  /* background: rgba(0, 0, 0, 0.2); */
   /* border: None; */
   box-shadow: None;
   /* box-shadow: inset 0 -3px #e9e9e9; */
@@ -196,9 +208,9 @@ label:focus {
 #custom-launcher {
   color: #e9e9e9;
   /* border: None; */
-  /* margin-right: 0px; */
+  margin: 0 0px 0 8px ;
   /* padding-right: 0px; */
-  padding: 0 10px;
+  /* padding: 0 10px; */
 }
 
 #custom-launcher:hover {
@@ -212,11 +224,13 @@ label:focus {
 }
 
 #network.disconnected {
-  background-color: #f53c3c;
+  /* background-color: #F8545C; */
+  color: #e9e9e9;
 }
 
 #pulseaudio {
-  /* padding: 1px; */
+  padding: 1px;
+    margin: 0 0px;
   /* background-color: #B48EAD; */
   /* color: #bb9af7; */
   color: #e9e9e9;
@@ -234,7 +248,8 @@ label:focus {
 #pulseaudio.muted {
   /* background-color: #90b1b1; */
   /* color: #2a5c45; */
-  color: #f53c3c;
+  /* color: #f53c3c; */
+  color: #F8545C;
 }
 
 #custom-media {
@@ -323,4 +338,13 @@ label:focus {
 
 #keyboard-state > label.locked {
   background: rgba(0, 0, 0, 0.2);
+}
+
+tooltip {
+    background-color: #171a1f;
+    border: solid #171a1f 2px;
+    border-radius: 16px;
+    color: #b6beca;
+    padding: 14px;
+    margin-right: 40px;
 }
